syntax = "proto3";

package view;
option java_package = "com.start.view";
option java_outer_classname = "ViewProto";

import "controller.proto";

message ViewResponse {
  bool displayed = 1;
}

service RobotView {
  rpc ShowRobotStatus (controller.RobotStatusRequest) returns (ViewResponse);
}
